# image2textart

./: Cargo.toml  README.md
.github/workflows/: check.yml  release.yml
src/: cli.rs  lib.rs
